WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251384
Fix a rare crash under data detector highlight painting logic
https://bugs.webkit.org/show_bug.cgi?id=251384
Summary
Fix a rare crash under data detector highlight painting logic
Wenson Hsieh
Reported
2023-01-30 12:49:42 PST
rdar://104723803
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-01-30 13:02:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9338
EWS
Comment 2
2023-01-30 17:41:16 PST
Committed
259599@main
(312ff43f570c): <
https://commits.webkit.org/259599@main
> Reviewed commits have been landed. Closing PR #9338 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug