Fix a rare crash under data detector highlight painting logic https://bugs.webkit.org/show_bug.cgi?id=251384 rdar://104723803

Reviewed by Megan Gardner.

Add a null check for the `DDHighlightRef` before attempting to ask for `DDHighlightGetBoundingRect`.
It's not clear how to trigger this crash, so this patch only makes this painting codepath robust
against `m_highlight` being `nil`.

* Source/WebCore/platform/mac/DataDetectorHighlight.mm:
(WebCore::DataDetectorHighlight::paintContents):

Canonical link: https://commits.webkit.org/259599@main